$Id: History,v 1.50 2002-11-04 13:44:23 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 4th 2002 M.Dressel (event-V04-01-05)
     - remove G4std:: where it does not belong to

Oct 28 2002, M.Dressel (event-V04-01-04)
- Added G4CellScorer[.hh.cc], G4CellScorerStore[.hh.cc], G4ScoreTable[.hh.cc], G4Scorer[.hh.cc]

Oct 06 2002, M.Asai (event-V04-01-03)
- Protect user's mis-use of destructor of G4TrajectoryContainer.
  By design it was expected that G4TrajectoryContainer would be
  deleted by G4Event destructor, after "clearAndDestroy" is
  separately invoked.

Aug 19 2002, M.Asai (event-V04-01-02)
- Change the default value of charge for G4PrimaryParticle.

Aug 13 2002, M.Asai (event-V04-01-01)
- G4Event: Introducing an EventAborted flag.

Jun 29 2002, V.Ivantchenko (event-V04-01-00)
- G4PrimaryParticle: fixed initialisation of 'charge' in constructors.

Jun 8 2002, M.Asai (event-V04-00-04)
- Fix G4TrajectoryContainer to be compliant to gcc-3.1.

May 29 2002, M.Asai (event-V04-00-03)
- Added TransferOneStackedTrack() method to G4StackManager.

May 15 2002, M.Asai (event-V04-00-02)
- Introducing new G4TrajectoryContainer class which aggregates STL vector,
  instead of deriving from STL vector.
