@@ -1,4 +1,4 @@
-$Id: History,v 1.50 2002-11-04 13:44:23 gcosmo Exp $
+$Id: History,v 1.51 2002-11-18 22:43:13 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Nov 18 2002, M.Asai (event-v04-01-06)
+- Introducing HepMC interfaces
+- Tag for Geant4 5.0 release
 
 Nov 4th 2002 M.Dressel (event-V04-01-05)
      - remove G4std:: where it does not belong to
